--- a/src/app/components/select-files/select-files.html
+++ b/src/app/components/select-files/select-files.html
@@ -22,9 +22,9 @@
                     <input type="checkBox" data-ng-model="$ctrl.selectedMeplFiles[$index]" ng-true-value="{{file}}" ng-false-value="" ng-change="toggleCheckItem(item)"
                            id="myCheckbox[{{file.MEPLID}}]" name="myMepls" /> 
                 </div>
-                <div style="width:17%;"> {{ file.FILENAME.slice(file.FILENAME.lastIndexOf('/') + 1) }} </div>
+                <div style="width:17%;"> {{ file.FILEPATH.slice(file.FILEPATH.lastIndexOf('/') + 1) }} </div>
                 <div style="width:12%;"> {{ file.RELEASE }} </div>
-                <div style="width:16%;"> {{ file.CREATETIME }} </div>
+                <div style="width:16%;"> {{ file.DATE | date:'y-MM-dd HH:mm:ss'}} </div>
                 <div style="width:18%;"> {{ file.REPORTTIME }} </div>
                 <div style="width:28%;">
                     <input class="item-value" style="width: 96%;" data-ng-model="$ctrl['meplComment'+$index]" data-ng-readonly="!$ctrl['editable'+$index]" data-ng-class="{'item-value-editable':$ctrl['editable'+$index]}" ng-value="file.COMMENT">
