--- a/src/app/directives/headBar/headBar.html
+++ b/src/app/directives/headBar/headBar.html
@@ -1,7 +1,7 @@
 <div class="header-container">
   <div class="app-label">
     <div style="font-family: HelvNeue Medium for IBM;font-size: 12px;">IBM zServiceAdvisor Sample Application</div>
-    <div style="font-family: HelvNeue Roman for IBM;font-size: 14px;"><span class="user-icon"></span>User Name</div>
+    <div style="font-family: HelvNeue Roman for IBM;font-size: 14px;"><span class="user-icon"></span> {{$root.user.email}} </div>
   </div>
   <div>
     <div class="browser-nav cp {{ $ctrl.routerType == 'meplFiles' ? 'tab-actived' : ''}}" ng-click="$ctrl.switchTabState()('main.selectFiles')">MEPL Files</div>
