get apar detail component

--- a/src/app/commonComponents/table/table.less
+++ b/src/app/commonComponents/table/table.less
@@ -2,3 +2,11 @@
 common-table > .table > tbody > tr > td {
     border-top: none;
 }
+
+/* 2018.8.23 16:24 */
+.actived-link {
+    color: #A8216E;
+    font-family: HelvNeue Roman for IBM;
+    border-bottom: 2px dotted;
+    cursor: pointer;
+}
