--- a/src/app/components/report-detail/report-detail.html
+++ b/src/app/components/report-detail/report-detail.html
@@ -3,7 +3,7 @@
         <img src="/images/back.png" class="cp" style="margin-right: 10px;" ui-sref="main.report"> {{ $ctrl.reportDetail.reportName }}
     </div>
 
-    <div class="" style="display: flex; flex-direction: column;">
+    <div style="display: flex; flex-direction: column;">
         <div style="align-self: flex-end;">
             <button class="button-upload" ng-click="$ctrl.send()">Send</button>
         </div>
