--- a/src/app/components/apar-detail/apar-detail.html
+++ b/src/app/components/apar-detail/apar-detail.html
@@ -1,7 +1,7 @@
 <div class="apar-detail-container">
     <div class="page-title" style="position: relative; left: -80px;">
         <img src="/images/back.png" class="cp" style="margin-right: 10px;" ui-sref="main.report"> 
-        <span style="vertical-align: middle;">Details for PI90729</span>
+        <span style="vertical-align: middle;">Details for {{ $ctrl.aparId || $ctrl.ptfId }}</span>
     </div>
 
     <div style="display: flex; flex-direction: column;">
@@ -10,76 +10,58 @@
         </div> -->
         <div class="table" style="margin: 70px 0px 0px 0px;">
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                    PTF
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> PTF </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>UI53036，</div>
+                <div>{{ $ctrl.apar.ptfs.join() || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        PEPTF
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> PEPTF </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>N/A</div>
+                <div>{{ $ctrl.apar.pes.join() || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        Recommendation
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Recommendation </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>
-                    <img src="/images/star/star-empty.svg" class="cp" ng-show='!$ctrl.showHIPERs' ng-click='$ctrl.showHIPERs=true'>
+                    <img src="/images/star/star-full.svg" class="cp" ng-repeat="star in $ctrl.fullStar track by $index">
+                    <img src="/images/star/star-half-full.svg" class="cp" ng-repeat="star in $ctrl.halfStar track by $index">
+                    <img src="/images/star/star-empty.svg" class="cp" ng-repeat="star in $ctrl.emptyStar track by $index">
                 </div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        Business Impact
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Business Impact </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>SYSTEMOUTAGE</div>
+                <div>{{ $ctrl.apar.keyword || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        Abstract
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Abstract </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>Db2 Eots Incorrectly aborted an in-commit UR After RRS was restarted and had done a resync with rrsaf.</div>
+                <div>{{ $ctrl.apar.abstract || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        Trigger
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Trigger </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>Db2 deferred End of Task processing may abort a DB2 UR that z/OS RRS was intending to commit.\nThis may occur if z/OS RRS is restarted and it has a UR that it intends to commit, but the Db2 application is cancelled or terminates before z/OS RRS is able to drive the Db2 RRSAF Commit Exit."</div>
+                <div>{{ $ctrl.apar.triggers || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        Local Fix
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Local Fix </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>N/A</div>
+                <div>{{ $ctrl.apar.localfix || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        Users Affected
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Users Affected </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>All Db2 11 & Db2 12 for z/os users of PITR(Point in time recovery) restart</div>
+                <div>{{ $ctrl.apar.effect || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        Summary
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Summary </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>During Db2 PITR restart, any inflight thread(Unit of Recovery) that requires to be backed out, may abend in DSNIARPL equal 5008. This abend should be avoided because we know this thread will be recovered later by RESTORE utility. </div>
+                <div>{{ $ctrl.apar.summary || 'N/A' }} </div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;">
-                        Conclusion
-                </div>
+                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Conclusion </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div>The logic in DSNIARPL is changed to avoid dsniarpl:5008 abend during PITR restart.</div>
+                <div>{{ $ctrl.apar.conclusion || 'N/A' }}</div>
             </div>
         </div>
     </div>
