--- a/src/app/components/apar-detail/apar-detail.html
+++ b/src/app/components/apar-detail/apar-detail.html
@@ -10,17 +10,17 @@
         </div> -->
         <div class="table" style="margin: 70px 0px 0px 0px;">
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> PTF </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> PTF </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.ptfs.join() || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> PEPTF </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> PEPTF </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.pes.join() || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Recommendation </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Recommendation </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>
                     <img src="/images/star/star-full.svg" class="cp" ng-repeat="star in $ctrl.fullStar track by $index">
@@ -29,37 +29,37 @@
                 </div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Business Impact </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Business Impact </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.keyword || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Abstract </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Abstract </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.abstract || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Trigger </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Trigger </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.triggers || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Local Fix </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Local Fix </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.localfix || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Users Affected </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Users Affected </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.effect || 'N/A' }}</div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Summary </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Summary </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.summary || 'N/A' }} </div>
             </div>
             <div class="flex-row">
-                <div class="col-2 table-head nb" style="padding: 0px 0px 0px 15px; min-width:8%;"> Conclusion </div>
+                <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Conclusion </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
                 <div>{{ $ctrl.apar.conclusion || 'N/A' }}</div>
             </div>
