--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -3,9 +3,9 @@
   <!-- Add error message bar here -->
   
   <div class="content-body {{isMenuOpen ? 'layout-menu-open1' : 'layout-menu-closed'}}">
-  	<div class="content-page">
+  	<div>
   		<div mask></div>
-  		<div ui-view class="page"></div>
+  		<div ui-view class="page-container"></div>
   	</div>
   </div>
 </div>
