--- a/src/app/directives/headBar/headBar.html
+++ b/src/app/directives/headBar/headBar.html
@@ -6,6 +6,8 @@
   <div>
     <div class="browser-nav cp {{ $ctrl.routerType == 'meplFiles' ? 'tab-actived' : ''}}" ng-click="$ctrl.switchTabState()('main.selectFiles')">MEPL Files</div>
     <div class="browser-nav cp" ng-class="{'tab-actived':$ctrl.routerType == 'report'}" ng-click="$ctrl.switchTabState()('main.report')">Reports</div>
-    <div class="browser-nav cp" ng-class="{'tab-actived':$ctrl.routerType == 'wishList'}" ng-click="$ctrl.switchTabState()('main.wishList')">Wish List (10)</div>
+    <div class="browser-nav cp" ng-class="{'tab-actived':$ctrl.routerType == 'wishList'}" ng-click="$ctrl.switchTabState()('main.wishList')">
+      Wish List {{ $ctrl.wishListNumber }}
+    </div>
   </div>
 </div>
