--- a/src/app/components/apar-detail/apar-detail.html
+++ b/src/app/components/apar-detail/apar-detail.html
@@ -15,12 +15,12 @@
             <div class="flex-row lh-default">
                 <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> PTF </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div class="column-padding">{{ $ctrl.apar.ptfs.join() || 'N/A' }}</div>
+                <div class="column-padding">{{ $ctrl.apar.ptfIds.join(', ') || 'N/A' }}</div>
             </div>
             <div class="flex-row lh-default">
                 <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> PEPTF </div>
                 <div class="vertical-line" style="margin: 0px 37px 0px 37px;"></div>
-                <div class="column-padding">{{ $ctrl.apar.pes.join() || 'N/A' }}</div>
+                <div class="column-padding">{{ $ctrl.apar.peIds.join(', ') || 'N/A' }}</div>
             </div>
             <div class="flex-row lh-default">
                 <div class="table-head nb col-min-width-114" style="padding: 0px 0px 0px 15px;"> Recommendation </div>
